...
            "state": "translated",
            "value": "描述你自己的设定。"
          }
        }
      }
    },
    "Done": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "完了"
          }
...
            "state": "translated",
            "value": "叙述者运行于"
          }
        }
      }
    },
    "Net worth": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "総資産"
          }
...
            "state": "translated",
            "value": "到"
          }
        }
      }
    },
    "Treasury": {
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "金庫"
          }
...
